--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.1.0",
-    "electron": "^24.1.3",
-    "electron-builder": "^23.6.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.1.4",
-    "vite-plugin-electron": "^0.11.2",
-    "vite-plugin-electron-renderer": "^0.14.1",
-    "vue": "^3.2.47",
-    "vue-tsc": "^1.2.0"
+    "@vitejs/plugin-vue": "4.1.0",
+    "electron": "24.4.0",
+    "electron-builder": "23.6.0",
+    "typescript": "5.0.2",
+    "vite": "4.1.4",
+    "vite-plugin-electron": "0.11.2",
+    "vite-plugin-electron-renderer": "0.14.1",
+    "vue": "3.2.47",
+    "vue-tsc": "1.2.0",
+    "node-fetch": "3.3.1"
   }
 }
